--- a/seminar-project/pom.xml
+++ b/seminar-project/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -87,6 +92,12 @@
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
                         <version>${version.plugin.checkstyle}</version>
+                    </dependency>
+                    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+                    <dependency>
+                        <groupId>com.google.code.gson</groupId>
+                        <artifactId>gson</artifactId>
+                        <version>2.8.5</version>
                     </dependency>
                 </dependencies>
 	     </plugin>
